--- a/01 - JavaScript Drum Kit/index.html
+++ b/01 - JavaScript Drum Kit/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>JS Drum Kit</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <script type="text/javascript" src="script.js"></script>
 </head>
 <body>
 
@@ -55,32 +56,6 @@
   <audio data-key="74" src="sounds/snare.wav"></audio>
   <audio data-key="75" src="sounds/tom.wav"></audio>
   <audio data-key="76" src="sounds/tink.wav"></audio>
-
-<script>
-  function removeTransition(e) {
-    //transitionend会触发多个事件，包括transform和四个边框的变化等等
-    if(e.target.classList.contains("playing"))
-      e.target.classList.remove("playing");
-    else
-      return;
-  }
-  function playSound(e) {
-    //const、模板字符串均为es6新特性
-    const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
-    const key = document.querySelector(`div[data-key="${e.keyCode}"]`);
-    if (!audio)
-      return;
-    key.classList.add('playing');
-    audio.currentTime = 0;
-    audio.play();
-  }
-  //Array.from为es6中的新方法
-  //用于将一个 ArrayLike 对象或者 Iterable 对象转换成一个 Array
-  const keys = Array.from(document.querySelectorAll('.key'));
-  //=>为es6新增的Arrow Functions
-  keys.forEach(key => key.addEventListener('transitionend', removeTransition));
-  window.addEventListener('keydown', playSound);
-</script>
 
 </body>
 </html>
